--- a/package.json
+++ b/package.json
@@ -30,10 +30,12 @@
     "jit-grunt": "^0.9.1",
     "jshint-stylish": "^1.0.0",
     "karma": "^0.13.19",
+    "karma-coverage": "^0.5.3",
     "karma-jasmine": "^0.3.7",
     "karma-ng-html2js-preprocessor": "^0.2.1",
     "karma-ng-scenario": "^0.1.0",
     "karma-phantomjs-launcher": "^1.0.0",
+    "karma-spec-reporter": "0.0.24",
     "phantomjs": "^2.1.3",
     "phantomjs-prebuilt": "^2.1.4",
     "time-grunt": "^1.0.0"
