--- a/bower.json
+++ b/bower.json
@@ -10,8 +10,9 @@
     "angular-route": "^1.4.0",
     "angular-sanitize": "^1.4.0",
     "angular-touch": "^1.4.0",
-    "angular-bootstrap":"^1.2.0",
-    "angular-print":"^0.3.0"
+    "angular-bootstrap": "^1.2.0",
+    "angular-print": "^0.3.0",
+    "ng-table-to-csv": "^0.3.0"
   },
   "devDependencies": {
     "angular-mocks": "^1.4.0"
